# InterchangeDB

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  types.rs
src/: error.rs  lib.rs  types.rs
src/buffer/: buffer_pool_manager.rs  frame.rs  mod.rs  page_guard.rs  stats.rs
src/buffer/replacer/: fifo.rs  mod.rs
src/common/: config.rs  error.rs  frame_id.rs  mod.rs  page_id.rs
src/concurrency/: mod.rs
src/execution/: mod.rs
src/index/: mod.rs
src/index/btree/: mod.rs
src/recovery/: mod.rs
src/storage/: disk_manager.rs  mod.rs
src/storage/page/: mod.rs  page.rs  page_header.rs
tests/: buffer_pool_integration.rs  buffer_pool_manager_test.rs
