[package]
name = "interchangedb"
version = "0.1.0"
edition = "2021"
authors = ["Erich"]
description = "A database with runtime-swappable buffer pool eviction policies"
license = "MIT"

[lib]
name = "interchangedb"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
crc32fast = "1.3"

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
tempfile = "3.10"

[lints.clippy]
all = "warn"
